--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -13,9 +13,9 @@
         <mat-expansion-panel expanded>
 
             <mat-expansion-panel-header>
-                <mat-panel-title style="align-items: center; color: darkred;">
-                    <mat-icon>face</mat-icon>
-                    <span class="mx-2">Público</span>
+                <mat-panel-title class="sidenav-title">
+                    <mat-icon class="sidenav-title-icons">face</mat-icon>
+                    <span class="sidenav-title-text mx-2">Público</span>
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
@@ -52,8 +52,8 @@
 
                 <mat-expansion-panel-header>
                     <mat-panel-title style="align-items: center; color: darkred;">
-                        <mat-icon>{{ item.icon }}</mat-icon>
-                        <span class="mx-2">{{ item.titulo }}</span>
+                        <mat-icon class="sidenav-title-icons">{{ item.icon }}</mat-icon>
+                        <span class="sidenav-title-text mx-2">{{ item.titulo }}</span>
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
