--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -10,7 +10,7 @@
 .saturno-title {
   font-size: 1.3em;
   font-family: sans-serif;
-  font-weight: lighter;
+  font-weight: 200;
   letter-spacing: .3em;
   line-height: normal;
 }
