--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn p-2" class="shadow-box animated fadeIn m-2 p-2">
+<div class="shadow-box animated fadeIn m-4 p-3">
 
     <form ngNativeValidate #f="ngForm" (ngSubmit)="login( f )">
 
