--- a/src/app/pages/user/companies/company-create/company-create.component.html
+++ b/src/app/pages/user/companies/company-create/company-create.component.html
@@ -32,7 +32,7 @@
     <div *ngIf="!companyEdit" class="row text-center">
         <div class="col">
             <button *ngIf="!companyEdit" class="btn btn-success btn-block text-uppercase" type="submit">
-                Alta de Empresa
+                Crear Comercio
             </button>
         </div>
     </div>
