--- a/src/app/pages/user/desktops/desktop-create-form/desktop-create-form.component.html
+++ b/src/app/pages/user/desktops/desktop-create-form/desktop-create-form.component.html
@@ -6,7 +6,7 @@
     </mat-form-field>
 
     <div class="form-group text-center">
-        <button class="btn btn-success btn-block text-uppercase waves-effect waves-light" type="submit">Alta de Ventanilla</button>
+        <button class="btn btn-success btn-block text-uppercase waves-effect waves-light" type="submit">Crear Escritorio</button>
     </div>
 
 </form>
