--- a/src/app/pages/assistant/home/home.component.html
+++ b/src/app/pages/assistant/home/home.component.html
@@ -43,7 +43,7 @@
 
                 <div class="my-4" *ngIf="desktopsAvailable.length > 0">
 
-                    <mat-form-field appearance="fill">
+                    <mat-form-field appearance="fill" class="w-100">
                         <mat-label>Seleccione un escritorio</mat-label>
                         <mat-select #selectDesktop matNativeControl required>
                             <mat-option *ngFor="let desktop of desktopsAvailable" [value]="desktop">
@@ -52,12 +52,11 @@
                         </mat-select>
                     </mat-form-field>
 
-                    <div>
-                        <button class="btn btn-success btn-lg btn-block" role="button"
-                            (click)="takeDesktop( selectDesktop?.value )">
-                            Ingresar
-                        </button>
-                    </div>
+                    <button class="btn btn-success btn-block" role="button"
+                        (click)="takeDesktop( selectDesktop?.value )">
+                        Ingresar
+                    </button>
+
                 </div>
             </div>
 
@@ -65,7 +64,7 @@
             <!-- DESKTOPS TABLE -->
             <!-- ======================================================== -->
 
-            <div class="card bg-primary mb-4" style="min-width: 18rem; max-width: 30rem; font-size: large; font-weight: lighter;">
+            <div class="card bg-secondary mb-4" style="min-width: 18rem; max-width: 30rem;">
                 <div class="card-content table-responsive-sm  p-2">
 
                     <table class="table table-sm text-white text-center">
@@ -83,7 +82,7 @@
                                 <div *ngIf="desktop.id_assistant">
                                     {{desktop.id_assistant?.tx_name}}
                                 </div>
-                                <div *ngIf="!desktop.id_assistant" style="color: limegreen;">
+                                <div *ngIf="!desktop.id_assistant" style="color: mediumspringgreen;">
                                     Disponible
                                 </div>
                             </td>
@@ -102,7 +101,7 @@
             del escritorio tenía asignada una sesión de turno, este turno finalizará.
         </p>
 
-        <a class="btn btn-primary btn-lg btn-block" routerLink="/assistant/dashboard" role="button">Dashboard</a>
+        <a class="btn btn-primary btn-block" routerLink="/assistant/dashboard" role="button">Dashboard</a>
 
     </div>
 
