--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,12 @@
-<div class="shadow-box animated fadeIn m-2 p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="shadow-box animated fadeIn m-4 p-3" style="min-width: 18rem; max-width: 30rem;">
 
   <div class="jumbotron">
-    <h1 class="display-4">Bienvenido a la Web de Turnos</h1>
-    <p class="lead mb-5">Desde aquí puede sacar un turno y esperar donde usted quiera evitando salas de espera.</p>
-
-
+    <h2>Bienvenido</h2>
+    <p class=" lead mb-2">Desde aquí puede sacar un turno y esperar donde usted quiera evitando salas de espera.</p>
   </div>
-  <button class="btn btn-primary m-1" routerLink="/public" role="button">SACAR UN TURNO</button>
-  <button class="btn btn-dark m-1" routerLink="/register" role="button">REGISTRARME</button>
+
+  <button class="btn btn-primary btn-lg btn-block m-1" routerLink="/public" role="button">OBTENER TURNO</button>
+  <!-- <button class="btn btn-dark m-1" routerLink="/register" role="button">REGISTRARME</button> -->
 
   <div class="container mt-5">
     <div class="row" style="align-items: center;">
