--- a/src/app/pages/public/screen/screen.component.html
+++ b/src/app/pages/public/screen/screen.component.html
@@ -105,7 +105,7 @@
         <!-- ULTIMO TURNO -->
         <!-- ======================================================== -->
 
-        <!-- <div class="card text-white bg-danger mb-4">
+        <div class="card text-white bg-danger mb-4" *ngIf="!ticketsService.myTicket && ticketsService.myTicketTmEnd===null">
             <div class="card-header banner-title">ULTIMO TURNO</div>
             <div class="banner-content" style="background-color: rgb(141, 51, 51)">
 
@@ -123,7 +123,7 @@
                 </div>
 
             </div>
-        </div> -->
+        </div>
 
         <!-- ======================================================== -->
         <!-- PUBLICIDAD -->
@@ -160,7 +160,7 @@
                     </tr>
                     <tr *ngFor="let ticket of ticketsService.ticketsTail;">
                         <td style="text-align: center;">
-                            {{ ticket.id_skill.cd_skill }}{{ ticket.cd_number }}</td>
+                            {{ ticket.id_skill?.cd_skill }}{{ ticket.cd_number }}</td>
 
                         <td style="text-align: center; ">{{ ticket.id_desk.cd_desktop }}</td>
 
@@ -189,7 +189,7 @@
 <!-- ======================================================== -->
 <!-- PUBLIC BUTTONS -->
 <!-- ======================================================== -->
-<div class="container bg-light fixed-bottom shadow-box no-radius text-center py-1">
+<div *ngIf="ticketsService.myTicket"  class="container bg-light fixed-bottom shadow-box no-radius text-center py-1">
     <div class="row">
   
         <div class="col-6 button-content">
