--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -1,13 +1,7 @@
-<div class="shadow-box animated fadeIn m-2 p-2" style="min-width: 18rem; max-width: 30rem;">
+<div class="shadow-box animated fadeIn m-4 p-3" style="min-width: 18rem; max-width: 30rem;">
 
     <div *ngIf="!companySelected" class="jumbotron">
-        <h1 class="display-4">Ingrese la empresa</h1>
-
-        <p class="p-3" style="background-color: whitesmoke; border-radius: .2rem;">
-            Puede utilizar el buscador o ingresar directamente a la empresa ingresando
-            a su web pública por ejemplo:<br>
-            <b>https://saturno.live/#/public/suempresa</b>
-        </p>
+        <h2>Ingrese la empresa</h2>
 
         <hr class="my-4">
         <div class="my-2">
@@ -41,12 +35,11 @@
                 {{ companySelected.cd_city }}
             </p>
         </div>
-        <button class="btn btn-success btn-lg btn-block" (click)="goToCompany()">Ir hacia
+        <button class="btn btn-success btn-lg btn-block" (click)="goToCompany()">Ir a
             {{companySelected.tx_company_name}}
         </button>
-        <button class="btn btn-danger btn-lg btn-block" (click)="companySelected=null">
-            Volver
-        </button>
     </div>
-
+<div routerLink="/">
+    Volver al inicio
+</div>
 </div>
