desk fix no skills, public nav

--- a/src/app/pages/assistant/desktop/desktop.component.html
+++ b/src/app/pages/assistant/desktop/desktop.component.html
@@ -76,9 +76,10 @@
   <!-- ======================================================== -->
 
   <div class="card bg-danger text-warning p-3 mb-4" style="min-width: 18rem; max-width: 30rem;"
-    *ngIf="skillsAssistant.length === 0">
+    *ngIf="skillsAssistantThisCompany.length === 0">
     <p class="lead">
-      !Usted no tiene skills o habilidades asignadas a su usuario!
+      Usted no tiene habilidades asignadas. Puede asignarse habilidades 
+      editando su usuario desde "Asistentes" del menú de Usuario.
     </p>
   </div>
 
