--- a/src/app/pages/assistant/home/home.component.html
+++ b/src/app/pages/assistant/home/home.component.html
@@ -64,7 +64,7 @@
             <!-- DESKTOPS TABLE -->
             <!-- ======================================================== -->
 
-            <div class="card bg-secondary mb-4" style="min-width: 18rem; max-width: 30rem;">
+            <div class="card bg-secondary mb-4">
                 <div class="card-content table-responsive-sm  p-2">
 
                     <table class="table table-sm text-white text-center">
