--- a/src/app/pages/public/search/search.component.html
+++ b/src/app/pages/public/search/search.component.html
@@ -39,7 +39,7 @@
             {{companySelected.tx_company_name}}
         </button>
     </div>
-<div routerLink="/">
-    Volver al inicio
-</div>
+    <div style="cursor: pointer;" routerLink="/">
+        Volver al inicio
+    </div>
 </div>
